# iris

./: README.md  __init__.py  analyzer.py  dataset.py  predictor.py  pyproject.toml
core/: types.py  utils.py
docs/: demo.py  guide.md
engine/: base.py  classifiers.py  factory.py  interfaces.py  models.py  regressors.py
engine/timeseries/: engine.py
engines/: base.py  classification.py  factory.py  regression.py  timeseries.py  unsupervised.py
feature_engineering/: automated.py  timeseries.py
features/: automated.py  timeseries.py
foundation/: exception.py  types.py  utils.py
models/: supervised.py
