[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-automl"
version = "0.1.0"
description = "Friendly AutoML Library"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Saharat Vithchataya", email = "saharat.vithchataya@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "pyarrow==22.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "pydantic>=2.11.10",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
    "shap>=0.50.0",
    "chardet>=5.2.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "jupyter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["iris*"]
